fix: batch process not updating apps available for update that were upgraded outside app

--- a/client/src/components/portainer/PortainerContainerCard.module.css
+++ b/client/src/components/portainer/PortainerContainerCard.module.css
@@ -55,6 +55,14 @@ body.dark-mode .currentCard:hover {
   cursor: not-allowed;
 }
 
+.clickableCard {
+  cursor: pointer;
+}
+
+.clickableCard:hover {
+  cursor: pointer;
+}
+
 .cardHeader {
   display: flex;
   justify-content: space-between;
