--- a/client/src/pages/BatchPage.module.css
+++ b/client/src/pages/BatchPage.module.css
@@ -53,13 +53,8 @@ body.dark-mode .returnHomeButton:hover:not(:disabled) {
 
 .loadingContainer {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 200px;
+  flex-direction: column;
+  gap: 16px;
   padding: 40px;
-}
-
-.loadingText {
-  color: var(--text-secondary);
-  font-size: 1rem;
+  min-height: 200px;
 }
