--- a/client/src/components/settings/UserDetailsTab.module.css
+++ b/client/src/components/settings/UserDetailsTab.module.css
@@ -42,3 +42,18 @@
   margin: 0;
   text-align: center;
 }
+
+.exportContainer {
+  max-width: 100%;
+}
+
+.exportButtonContainer {
+  display: inline-block;
+  max-width: fit-content;
+}
+
+.exportHelperText {
+  display: block;
+  width: 100%;
+  max-width: 100%;
+}
