--- a/client/src/components/TrackedAppCard.module.css
+++ b/client/src/components/TrackedAppCard.module.css
@@ -62,6 +62,23 @@ body.dark-mode .noUpdate:hover {
   border-left: 2px solid var(--dodger-blue-light) !important;
 }
 
+.noCurrentVersion {
+  border-left: 2px solid var(--dodger-red) !important;
+}
+
+.noCurrentVersion:hover {
+  border-left: 2px solid var(--dodger-red) !important;
+  border-color: var(--border-color);
+}
+
+body.dark-mode .noCurrentVersion {
+  border-left: 2px solid var(--dodger-red) !important;
+}
+
+body.dark-mode .noCurrentVersion:hover {
+  border-left: 2px solid var(--dodger-red) !important;
+}
+
 .content {
   flex: 1;
 }
