--- a/client/src/components/settings/GeneralTab.module.css
+++ b/client/src/components/settings/GeneralTab.module.css
@@ -158,7 +158,9 @@ body.dark-mode .dangerButton:hover:not(:disabled) {
 
 .coffeeLink {
   display: inline-block;
-  transition: transform 0.2s, opacity 0.2s;
+  transition:
+    transform 0.2s,
+    opacity 0.2s;
 }
 
 .coffeeLink:hover {
